--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "localcoding-tests",
   "version": "1.0.0",
-  "description": "Cypress end-to-end tests for localcoding",
+  "description": "Cypress end-to-end tests for coding.pasv.us",
   "scripts": {
     "cy:open": "cypress open",
     "cy:run": "cypress run"
