install prettier, add .prettierrc.json, .prettierignore

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "localcoding-tests",
-  "version": "1.0.0",
-  "description": "Cypress end-to-end tests for coding.pasv.us",
-  "scripts": {
-    "cy:open": "cypress open",
-    "cy:run": "cypress run"
-  },
-  "keywords": [],
-  "author": "Rafail Ferre",
-  "license": "ISC",
-  "dependencies": {
-    "cypress": "^13.6.2"
-  }
+    "name": "localcoding-tests",
+    "version": "1.0.0",
+    "description": "Cypress end-to-end tests for coding.pasv.us",
+    "scripts": {
+        "cy:open": "cypress open",
+        "cy:run": "cypress run",
+        "prettier": "npx prettier . --write"
+    },
+    "keywords": [],
+    "author": "Rafail Ferre",
+    "license": "ISC",
+    "dependencies": {
+        "cypress": "^13.6.2"
+    },
+    "devDependencies": {
+        "prettier": "3.2.4"
+    }
 }
