--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.4.5"
     },
     "devDependencies": {
+        "chance": "^1.1.11",
         "prettier": "3.2.4"
     }
 }
